--- a/app/src/main/res/menu/job_menu.xml
+++ b/app/src/main/res/menu/job_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/navigation_add"
+        android:icon="@drawable/ic_add_white_24dp"
+        android:title="search"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/navigation_search"
